# secure_coding

./: readme.md  report.html
ai/: IT306_LLM_Security_Lab.ipynb  IT306_Lab8_Magika_RAG.ipynb  IT306_Magika_Evasion_Lab.ipynb  exaone-chat2.html  readme.md  yolo.md
ai/.ipynb_checkpoints/: IT306_LLM_Security_Lab-checkpoint.ipynb
ai/test_files/: data.json  hello.py  report.txt  suspicious
fuzz-test/: Makefile  README.md  fuzz_aflpp.c  fuzz_honggfuzz.c  fuzz_libfuzzer  fuzz_libfuzzer.c  vulnerable_lib.c  vulnerable_lib.h
fuzz-test/corpus_libfuzzer/: seed_checksum  seed_manage  seed_process  seed_rle
fuzz-test/fuzz_test/: crash-c632d2f7d9024cd447cad977f3eabae42139476c  test-fuzzer.c  test_fuzzer
fuzz-test/seeds_afl/: seed_header
fuzz-test/seeds_hf/: seed_config
lez-private-multisig/: Cargo.toml  README.md
lez-private-multisig/docs/: DESIGN.md
lez-private-multisig/membership_circuit/: Cargo.toml
lez-private-multisig/membership_circuit/guest/: Cargo.toml
lez-private-multisig/membership_circuit/guest/src/: main.rs
lez-private-multisig/membership_circuit/src/: host.rs  lib.rs
lez-private-multisig/methods/: Cargo.toml
lez-private-multisig/methods/guest/: Cargo.toml
lez-private-multisig/methods/src/: lib.rs
lez-private-multisig/multisig_core/: Cargo.toml
lez-private-multisig/multisig_core/src/: lib.rs
lez-private-multisig/multisig_program/: Cargo.toml
lez-private-multisig/multisig_program/src/: approve.rs  create_multisig.rs  execute.rs  lib.rs  propose.rs  propose_config.rs  reject.rs  verify.rs
lez-private-multisig/zk_common/: Cargo.toml
lez-private-multisig/zk_common/src/: lib.rs
password/: ntlm_hash.txt
pki/: gpg.md  joo_pub.asc  rootCA.crt  rootCA.key  rootCA.srl  server.crt  server.csr  server.key
sast/: semgrep-result.json  server.py  test.c
sast/lab_code/: vulnerable_board.py  vulnerable_config.py  vulnerable_deserialize.py  vulnerable_file.py  vulnerable_login.py
sca/: ml.c
ss/: readme.md  shamir  shamir.c
team-projects/private-auction-web/: README.md  build_deploy.ps1  go.mod  go.sum  install_deps.bat
team-projects/private-auction-web/cmd/auction/: main.go
team-projects/private-auction-web/cmd/bid/: main.go
team-projects/private-auction-web/cmd/blind-auction/: main.go
team-projects/private-auction-web/cmd/create_admin/: main.go
team-projects/private-auction-web/cmd/reveal/: main.go
team-projects/private-auction-web/cmd/seed_whitelist/: main.go
team-projects/private-auction-web/cmd/web/: main.go
team-projects/private-auction-web/db/: blind_auction.db  blind_auction.db-shm  blind_auction.db.bak  schema.sql
team-projects/private-auction-web/docs/: api.md  architecture.md  implementation_plan.md  security_spec.md
team-projects/private-auction-web/keys/: admin_ed25519.pem  alice_ed25519.pem  amie_ed25519.pem  eve_ed25519.pem  jooyeon_ed25519.pem  user_ed25519.pem
team-projects/private-auction-web/scratch/: kms_simulation.go
team-projects/private-auction-web/tests/: integration_whitelist_test.go  system_integrity_test.go
zkp/: schnorr.c  zkp.md
(+52 files in other folders)
