[workspace]
resolver = "2"
members = [
    "zk_common",
    "membership_circuit",
    "membership_circuit/guest",
    "multisig_core",
    "multisig_program",
    "methods",
    "methods/guest",
]

[workspace.dependencies]
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
risc0-build = "=3.0.5"
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc1" }
spel-framework = { git = "https://github.com/logos-co/spel.git", branch = "main" }
borsh = "1.5.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
