[package]
name = "membership-guest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "membership_proof"
path = "src/main.rs"

[dependencies]
zk_common = { path = "../../zk_common", default-features = false }
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std"] }
borsh = "1.5.7"
