[package]
name = "private-multisig-guest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "multisig"
path = "src/bin/multisig.rs"

[[bin]]
name = "generate_idl"
path = "src/bin/generate_idl.rs"
test = false

[dependencies]
multisig_core = { path = "../../multisig_core" }
multisig_program = { path = "../../multisig_program" }
membership_circuit = { path = "../../membership_circuit", default-features = false }
zk_common = { path = "../../zk_common", default-features = false }
nssa_core.workspace = true
risc0-zkvm.workspace = true
borsh.workspace = true
spel-framework.workspace = true
serde_json = "1"
